<resources>
    <string name="app_name">SieuThiDoGo</string>
    <string name="nav_home">Home</string>
    <string name="nav_giohang">Giỏ hàng</string>
    <string name="nav_account">Tài khoản</string>
    <string name="nav_myaccount">Thông tin cá nhân</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_change_password">Đổi mật khẩu</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="numberphone">Số điện thoại</string>
    <string name="name">Họ và Tên</string>
    <string name="address">Địa chỉ</string>
    <string name="register">Đăng ký</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">Bạn chưa có tài khoản? Bấm để đăng ký</string>
</resources>